# bvparty

./: .gitignore  Cargo.toml
art/: logo.afdesign  world.mtl
art/alphabet/: alphabet_.mtl
src/: .shaper_shader.wgsl.swp  lib.rs  main.rs  shader.wgsl  shader_buffer_b.wgsl  shaper_shader.wgsl
src/nocmp/: app_state.rs  bindgrouperoo.rs  camera.rs  gui.rs  mod.rs  obj_mesh_test.rs  obj_parser.rs  shadertoy_buffer.rs  spline_curves.rs  spline_test.rs  texture.rs
src/shadertoys/: fs_quad.wgsl  obj_test.wgsl  red_test.wgsl  shader_buffer_a.wgsl  shader_buffer_b.wgsl  shader_buffer_screen.wgsl  test.wgsl
