[package]
name = "bvparty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29",features = ["rwh_05"] }
env_logger ="0.10"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
instant = "0.1"
anyhow = "1.0"
matrix_operations = "0.1.5"
rust-rocket = "0.7.2"
rodio = "0.18.1"
cgmath = "0.18"
serde = {version = "1.0.183", features =["derive"]}
serde_json = "1.0.104"
rand = "0.8"
itertools = "0.11.0"
byteorder = "1.4.3"
lyon = "1.0.1"
nalgebra = "0.33.0"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png","jpeg"]


